# level-up-C-3084137

./: CMakeLists.txt
src/01_01/: CMakeLists.txt  ordinal.c  ordinal.h  ordinal.h.in  ordinal_main.c  ordinal_test.c
src/01_02/: CMakeLists.txt  centering.c
src/01_03/: CMakeLists.txt  change.c  change.h  change_main.c  change_test.c
src/01_04/: CMakeLists.txt  hailstone.c  hailstone.h  hailstone_interface.h  hailstone_main.c  hailstone_test.c
src/01_05/: CMakeLists.txt  shuffle.c  shuffle.h  shuffle_main.c  shuffle_test.c
src/01_07/: CMakeLists.txt  leapyear.c  leapyear.h  leapyear_main.c  leapyear_test.c
src/01_08/: CMakeLists.txt  shuffle.c  shuffle.h  shuffle_main.c
src/01_09/: CMakeLists.txt  king.c  king.h  king_main.c
