cmake_minimum_required(VERSION 3.5)
project(LevelUpC VERSION 0.9)

include(CTest)

add_subdirectory(src/01_01)
add_subdirectory(src/01_02)
add_subdirectory(src/01_03)
add_subdirectory(src/01_04)
add_subdirectory(src/01_05)

add_subdirectory(src/01_07)
add_subdirectory(src/01_08)
add_subdirectory(src/01_09)
